--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,6 @@
   display: flex;
   flex-direction: row;
   list-style-type: none;
-  justify-content: flex-end;
+  justify-content: space-around;
   margin-left: 10px;
 }
