--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@
   margin-left: 10px;
 }
 
-.sidebarMain{
+.sidebarMain {
   display: flex;
-  
+  flex-direction: row;
+  justify-content: center;
 }
